Correction suite à la modification de la version tablette sur la version ordinateur

--- a/assets/css/restaurants.scss
+++ b/assets/css/restaurants.scss
@@ -352,6 +352,10 @@
     }
   }
 
+  .restaurant__like {
+    right : 0;
+  }
+
   .footer {
     display : flex;
     flex-direction: row-reverse;
